--- a/src/NotesListItem/notes-list-item.css
+++ b/src/NotesListItem/notes-list-item.css
@@ -1,30 +1,30 @@
 .notes-item {
-    position: relative;
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid rgb(120, 120, 120);
-    margin-right: 2rem;
-    padding: 1rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid rgb(120, 120, 120);
+  margin-right: 2rem;
+  padding: 1rem;
 }
 .delete-img {
-    position: absolute;
-    right: 0;
-    cursor: pointer;
-    font-size: 1.5rem;
-    transform: rotate(45deg);
-    opacity: .2;
-    transition: opacity linear .2s;
+  position: absolute;
+  right: 0;
+  cursor: pointer;
+  font-size: 1.5rem;
+  transform: rotate(45deg);
+  opacity: 0.2;
+  transition: opacity linear 0.2s;
 }
 
 .delete-img:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .delete {
-    position: absolute;
-    top: 20%;
-    right: 0;
-    background-color: transparent;
-    border: none;
-    width: 100%;
+  position: absolute;
+  top: 20%;
+  right: 0;
+  background-color: transparent;
+  border: none;
+  width: 100%;
 }
